1.15 Not Released

 - Add test file t/release-kwalitee.t.

 - Accept three-letter abbreviation of angle unit.

 - Improve documentation in the POD.

 - Add test file t/release-unused-vars.t and remove unused variables.

 - Add test file t/release-pod-coverage.t.

 - Add test file t/release-whitespaces.t and clean up whitespace.

 - Add test file t/release-portability.t.

 - Add test file t/release-test-version.t.

 - Update README file.

 - Add default MANIFEST.SKIP from ExtUtils::Manifest.

 - Fix typos in POD.

 - Remove code that is never executed.

 - Rename the too generically property "units" to "angle_unit", and
   "distance_units" to "distance_unit".

 - Provide set_angle_unit() as an alternative to the too generically
   named method set_units(). The name set_angle_unit() corresponds
   nicely to the existing method set_distance_unit().

 - Add accessors get_angle_unit(), get_distance_unit(), get_ellipsoid(),
   get_equatorial_radius(), get_polar_radius(), get_flattening(), and
   get_eccentricity(), get_longitude_symmetric(), and
   get_bearing_symmetric(). These are necessary for subclassing.

 - Rename some old test files and add new test files.

 - Don't hardcode the value of pi.

 - Use more of the functionality in Test::More. This gives us more informative
   output if tests fail.

 - Rename the following object properties:

      "latitude"  -> "latitude_symmetric"
      "longitude" -> "longitude_symmetric"
      "bearing"   -> "bearing_symmetric"

   This makes them more descriptive, and they now match the methods
   set_latitude_symmetric() and set_bearing_symmetric(). The old object
   property names without the "_symmtric" suffix are still supported.

 - Add more information to the SYNOPSIS.

 - Increment version number.

 - Update BUGS and SUPPORT sections in the POD.

 - Update AUTHOR and COPYRIGHT information.

 - Remove range reduction in _normalize_input(). The trigonometric functions do
   more accurate range reduction than we do.
